--- a/src/_mixins.scss
+++ b/src/_mixins.scss
@@ -4,3 +4,22 @@
     background-size: cover;
     height: $height;
 }
+
+// logo, navigation menu, header, content areas, and footer
+
+
+
+
+//  media query mixin
+@mixin break($args...) {
+    @if length($args) == 1 {
+        @media (min-width: nth($args, 1)) {
+            @content;
+        }
+    } @else {
+        @media (min-width: nth($args, 1)) and 
+               (max-width: nth($args, 2)) {
+            @content;
+        }
+    }
+}
