--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,8 +2,7 @@
 @import "_content";
 @import "_normalize";
 @import "_footer";
-@import "_media";
-// @import "_mixins";
+@import "_mixins";
 @import "_base";
 @import "_navigation";
 
