--- a/src/_content.scss
+++ b/src/_content.scss
@@ -1,37 +1,36 @@
 #headline {
-    width:100%;
-    height:130px;
+    @include sectionSize(100%, 130px);
     background:$headline-color;
     text-align:center;
     margin:0 auto;
     h1{
         color:$nav-hover;
-        font-size:2.5em;
+        font-size: $font-size * 2.5;
         font-weight:100;
         padding-top:50px;
         @include break(459px, 767px) {
-            font-size:2em;
+            font-size: $font-size * 2;
             padding-top:50px;
         }
         @include break(0px, 459px) {
-            font-size:1.5em;
+            font-size: $font-size * 1.5;
             padding-top:30px;
         }
     }
 }
 
 #content {
-    width: $width;
+    @include sectionSize($width);
     margin: 20px auto;
     @include break(767px, 959px) {
         width:inherit;
     }
     h3 {
         color: $gray;
-        font-size: 2em;
+        font-size: $font-size * 2;
         font-weight: 400;
         @include break(0, 459px) {
-            font-size:1.6em;
+            font-size: $font-size * 1.6;
         }
     }
     #products {
@@ -60,15 +59,6 @@
         }
         h4 {
             line-height: 1em;
-        }
-        @include break(767px, 959px) {
-            width:46%;
-            margin:0 2%;
-        }
-        @include break(459px, 767px) {
-            width:96%;
-            margin:0 2%;
-            float:none;
         }
         #testimonials {
             width: $content-width;
