--- a/src/_navigation.scss
+++ b/src/_navigation.scss
@@ -1,9 +1,7 @@
 figure {
-    width: 400px;
-    height: $nav-height;
-    background: $logo-img no-repeat 0 50px;
-    float: $float;
-    display: block;
+    @include sectionSize(400px, $nav-height);
+    @include imageFormat();
+    @include floatDisplay();
     margin: 0;
     @include break(459px, 959px) {
         width:inherit;
@@ -18,9 +16,8 @@ figure {
 }
 
 nav {
-    float: $float;
-    width: 540px;
-    height: $nav-height;
+    @include sectionSize(540px, $nav-height);
+    @include floatDisplay();
     text-align: right;
     @include break(459px, 959px) {
         width:inherit;
@@ -39,14 +36,14 @@ nav {
         }
         li {
             display: inline;
-            font-size: 0.8em;
+            font-size: $font-size * 0.8;
             margin-right: 10px;
             @include break(0, 767px) {
-                font-size:0.8em;
+                font-size:$font-size * 0.8;
                 margin:0 5px;
             }
             @include break(767, 959px) {
-                font-size:1em;
+                font-size: $font-size;
                 margin:0 10px;
             }
             a {
